网络部分请求的封装

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,12 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     // 状态栏显示
     implementation 'com.gyf.immersionbar:immersionbar:3.0.0'
+/**
+ *  网络请求库
+ * */
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.4'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.6.1'
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.1'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.6.1'
 }
