--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,9 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.3'
+        classpath 'org.aspectj:aspectjtools:1.8.9'
+
+        classpath 'org.aspectj:aspectjweaver:1.8.9'
         
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
