--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,9 @@
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:name="com.example.application.MyApplication"
@@ -12,9 +15,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.MainActivity"></activity>
+        <activity android:name=".activity.Main2Activity"></activity>
+        <activity android:name=".activity.MainActivity" />
         <activity android:name=".activity.ProxyActivity" />
-        <activity android:name=".activity.Main2Activity">
+        <activity android:name=".activity.CameraActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
