--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,16 +15,27 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.Main2Activity"></activity>
+        <activity android:name=".activity.WebviewActivity"></activity>
+        <activity android:name=".activity.CameraActivity" />
+        <activity android:name=".activity.AIDLActivity" />
+        <activity android:name=".activity.MessengerActivity" />
+        <activity android:name=".activity.Main2Activity" />
         <activity android:name=".activity.MainActivity" />
         <activity android:name=".activity.ProxyActivity" />
-        <activity android:name=".activity.CameraActivity">
+        <activity android:name=".activity.TestActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service
+            android:name="com.example.service.MessengerService"
+            android:process=":messageService" />
+        <service
+            android:name="com.example.service.AIDLService"
+            android:process="com.example.testutils.service" />
     </application>
 
 </manifest>
