--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,8 +15,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.OnErrorActivity"
-             android:process=":icon"></activity>
+        <activity android:name=".activity.AnyViewTestActivity"></activity>
+        <activity
+            android:name=".activity.OnErrorActivity"
+            android:process=":icon" />
         <activity android:name=".activity.MvpActivity" />
         <activity android:name=".activity.LastViewBinActivity" />
         <activity android:name=".activity.ViewpageActivity" />
